[project]
name = "nocodb-api"
version = "0.0.2"
description = "Python client for NocoDB API v2"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "infeeeee", email = "gyetpet@mailbox.org" }]
maintainers = [{ name = "infeeeee", email = "gyetpet@mailbox.org" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

dependencies = ["requests"]

[project.optional-dependencies]
doc = ["pdoc"]

[project.urls]
homepage = "https://github.com/infeeeee/py-nocodb"
documentation = "https://github.com/infeeeee/py-nocodb"
repository = "https://github.com/infeeeee/py-nocodb"
changelog = "https://github.com/infeeeee/py-nocodb/releases"


[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["nocodb"]
